@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5779 2004/04/30 10:50:44 grant Exp $
+$NetBSD: CHANGES,v 1.5780 2004/04/30 15:11:28 reed Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2299,3 +2299,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added p5-Text-Quoted-1.5 [minskim 2004-04-30]
 	Added musicpd-0.10.3 [grant 2004-04-30]
 	Added mpc-0.10.3 [grant 2004-04-30]
+	Updated groff to groff-1.19nb4 [reed 2004-04-30]
